# Uncoin

./: .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: main_uncoin.yml
uncoin/: asgi.py  settings.py  urls.py  wsgi.py
