[tool.poetry]
name = "Uncoin"
version = "0.1.0"
description = "A website about creating a new virtual currency"
authors = ["Unknown"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
